Keranjang v1 - Galuh Alifani

--- a/cart.html
+++ b/cart.html
@@ -9,14 +9,43 @@
 </head>
 <body>
     <h1>Judul Situs</h1>
-    <h2>Bagian Input</h2>
-    <h2>Product Cards</h2>
+    <h2>Bagian Input (Senna)</h2>
+    <h2>Product Cards (Brian)</h2>
         <button packageId='1' class='addToCart' onclick="addPilihan(event)" style='margin: 10px'>Add to Cart (id 1)</button> 
         <button packageId='2' class='addToCart' onclick="addPilihan(event)" style='margin: 10px'>Add to Cart (id 2)</button> 
         <button packageId='3' class='addToCart' onclick="addPilihan(event)" style='margin: 10px'>Add to Cart (id 3)</button> 
         <button packageId='4' class='addToCart' onclick="addPilihan(event)" style='margin: 10px'>Add to Cart (id 4)</button> 
         <button packageId='5' class='addToCart' onclick="addPilihan(event)" style='margin: 10px'>Add to Cart (id 5)</button>
         <button packageId='6' class='addToCart' onclick="addPilihan(event)" style='margin: 10px'>Add to Cart (id 6)</button>
+        <br>
+        <br>
+        <p>Contoh button buat scroll ke bawah lihat keranjang, nanti bisa dipake</p>
+        <button onClick='window.location="#card"'>Lihat Keranjang</button>    
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
     <h2>Keranjang Saya</h2>
     <div id="card"></div>
 
