--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,19 @@
 <body>
     <h1>Judul Situs</h1>
     <h2>Bagian Input (Senna)</h2>
-    <h2>Product Cards (Brian)</h2>
+    <p>Contoh button buat scroll ke bawah lihat keranjang, nanti bisa dipake</p>
+    <button onClick='window.location="#card"'>Lihat Keranjang</button>    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2 id='productList'>Product Cards (Brian)</h2>
         <button packageId='1' class='addToCart' onclick="addPilihan(event)" style='margin: 10px'>Add to Cart (id 1)</button> 
         <button packageId='2' class='addToCart' onclick="addPilihan(event)" style='margin: 10px'>Add to Cart (id 2)</button> 
         <button packageId='3' class='addToCart' onclick="addPilihan(event)" style='margin: 10px'>Add to Cart (id 3)</button> 
@@ -35,20 +47,10 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
 
-    <h2>Keranjang Saya</h2>
-    <div id="card"></div>
-
+    <h2 style = >Keranjang Saya</h2>
+    <div id="card">Yah, Keranjangnya Kosong. Kamu Belum Pilih Paket Apapun</div>
+    <button id = 'kembali' onClick='window.location="#productList"'>Kembali ke Daftar Produk</button>  
     <script src="cart.js"></script>
 </body>
 </html>
