--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <div class="content">
-        <h1 id="destinasi">Jakarta</h1>
+    <div class="content" id="contentId">
+        
 
-        <div class="card">
+        <!-- <div class="card">
             <img src="assets/jkt.png" class="center">
             <div class="detail">
                 <h2>
@@ -38,7 +38,7 @@
                 <button id="minus">-</button>
             </div>
 
-        </div>
+        </div> -->
 
 
 
