--- a/fix.html
+++ b/fix.html
@@ -72,100 +72,12 @@
 
   </div>
   <div id="cart">
-    <hr>
-    <hr>
   </div>
 
-  <p>Contoh button buat scroll ke bawah lihat keranjang, nanti bisa dipake</p>
-  <button onClick='window.location="#card"'>Lihat Keranjang</button>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-=======
-            <div class="card">
-                <img src="Pulau-Pramuka.png" alt="Pulau seribu" style="width: 100%;">
-                <div class="container">
-                    <p class="font head">Jakarta : Paket Platinum</p>
-                    <p class="font">Harga : Rp. 1.500.000</p>
-                    <ul>
-                        <li class="font">Hotel + sarapan</li>
-                        <li class="font">Mobil sewa</li>
-                        <li class="font">Gratis tiket masuk pulau seribu</li>
-                        <li class="font">Makan malam</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="card-2 opacity">
-                <img src="Harga_Tiket_Masuk_Orchid_Forest_Lembang_-_Cikole_Bandung.jpg" alt="orchid-forest" style="width: 100%;">
-                <div class="container">
-                    <p class="font head">Bandung : Paket Silver</p>
-                    <p class="font">Harga : Rp. 500.000</p>
-                    <ul>
-                        <li class="font">Hotel + sarapan</li>
-                        <li class="font">Motor sewa</li>
-                        <li class="font">Gratis tiket masuk orchid forest</li>
-                        <li class="font">Makan malam</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="card-2">
-                <img src="Trans-Studio-Bandung.png" alt="Trans-Studio-Bandung" style="width: 100%;">
-                <div class="container">
-                    <p class="font head">Bandung : Paket Gold</p>
-                    <p class="font">Harga : Rp. 1.000.000</p>
-                    <ul>
-                        <li class="font">Hotel + sarapan</li>
-                        <li class="font">Mobil sewa</li>
-                        <li class="font">Gratis tiket masuk trans studio</li>
-                        <li class="font">Makan malam</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="card-2">
-                <img src="gunung-putri-lembang-bandung.jpg" alt="Gunung putri" style="width: 100%;">
-                <div class="container">
-                    <p class="font head">Bandung : Paket Platinum</p>
-                    <p class="font">Harga : Rp. 1.500.000</p>
-                    <ul>
-                        <li class="font">Hotel + sarapan</li>
-                        <li class="font">Mobil sewa</li>
-                        <li class="font">Gratis tiket masuk gunung putri</li>
-                        <li class="font">Makan malam</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="cart">
-        <hr>
-        <hr>
-    </div>
-    <p>Contoh button buat scroll ke bawah lihat keranjang, nanti bisa dipake</p>
-    <button class='lihatKeranjang' onClick='window.location="#card"'>Lihat Keranjang</button>    
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+<button class='lihatKeranjang button-position' onClick='window.location="#card"'>Lihat Keranjang</button>        
 <h2 style = >Keranjang Saya</h2>
 <div id="card">Yah, Keranjangnya Kosong. Kamu Belum Pilih Paket Apapun</div>
-<button id = 'kembali' class='lihatKeranjang' onClick='window.location="#contentId"'>Kembali ke Daftar Produk</button>  
+<button id = 'kembali' class='lihatKeranjang button-position' onClick='window.location="#contentId"'>Kembali ke Daftar Produk</button>  
 <div id="pembayaran">
 <p4> <strong> CHECKOUT </p4> </strong> <br>
   <p1> Payment Option </p1>
