--- a/fix.html
+++ b/fix.html
@@ -73,24 +73,43 @@
   </div>
   <div id="cart">
   </div>
-
-<button class='lihatKeranjang button-position-keranjang' onClick='window.location="#card"'>Lihat Keranjang</button>
-<button id = 'kembali' class='lihatKeranjang button-position-daftar' onClick='window.location="#contentId"'>Kembali ke Daftar Produk</button>  
+<div id="outer">
+  <button class='lihatKeranjang' onClick='window.location="#card"'>Lihat Keranjang</button>
+  <button id = 'kembali' class='lihatKeranjang' onClick='window.location="#contentId"'>Kembali ke Daftar Produk</button> 
+</div> 
 <div id ='total'></div>
-<div id="pembayaran" class="font">
-    <p4> <strong> CHECKOUT </p4> </strong> <br>
-      <p1> Payment Option </p1>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
       <h2 style=>Keranjang Saya</h2>
       <div id="card">Yah, Keranjangnya Kosong. Kamu Belum Pilih Paket Apapun</div>
       <button id='kembali' onClick='window.location="#contentId"'>Kembali ke Daftar Produk</button>
       <script src="cart.js"></script>
       <button id='checkoutButton' class = 'checkout' onClick='checkoutButton()'>Check Out</button>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
       <div id="pembayaran" style='display:none'>
         <p4> <strong> CHECKOUT </p4> </strong> <br>
         <p1> Payment Option </p1>
@@ -121,6 +140,9 @@
         </form>
       </div>
       </h1>
+      <br>
+      <br>
+      <br>
       <div id="bankTransfer">
         <h2>BANK MANDORO (Virtual Account)</h2>
         <h5>Account Number</h5>
